--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-        "petervanderwal/adventofcode-cli": "^1",
+        "petervanderwal/adventofcode-cli": "^1.1",
         "symfony/console": "^6.4",
         "symfony/dotenv": "^6.4",
         "symfony/flex": "^2",
@@ -36,8 +36,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "cache:clear": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
