--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.3",
+        "ext-gd": "*",
         "petervanderwal/adventofcode-cli": "^1.2",
         "symfony/console": "^6.4",
         "symfony/dotenv": "^6.4",
