puzzle: 2024 day 13 part 2 (need to verify)
It stopped after an hour at 35%, now increased the timeout and added a catch handler. Need to verify, but will focus first on newer days puzzles

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.3",
         "ext-gd": "*",
         "petervanderwal/adventofcode-cli": "^1.2",
+        "spatie/async": "^1.6",
         "symfony/console": "^6.4",
         "symfony/dotenv": "^6.4",
         "symfony/flex": "^2",
